# pulumi-challenges

./: pyproject.toml
.github/: CODEOWNERS  dependabot.yml
challenge-01-startup-in-a-box/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
challenge-01-startup-in-a-box/cdn/: main.py
challenge-01-startup-in-a-box/swag_provider/: main.py
challenge-01-startup-in-a-box/website/: index.html
challenge-02-quickstart/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  swag.json
challenge-02-quickstart/function/: handler.py
challenge-02-quickstart/policy/: __main__.py
challenge-03-deployment/: Pulumi.yaml  __main__.py
